<resources>
    <string name="app_name">D Calender</string>
    <string name="dayView1Weekday">Monday</string>
    <string name="dayView1Date">11/6</string>
    <string name="dayView2Weekday">Tuesday</string>
    <string name="dayView2Date">12/6</string>
    <string name="title_activity_sidebar">Sidebar</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="MainActivity">Main activity</string>
    <string name="subActivity">Sub Activity</string>
    <string name="selectActivity">Select Activity</string>
    <string name="subCategory">Sub Category</string>
    <string name="cancel"><u><i>Cancel</i></u></string>
    <string name="save"><u><i>Save</i></u></string>
    <string name="selectTaskColor">Task color</string>
    <string name="addTask">Add task</string>
    <string name="taskName">Task Name</string>
    <string name="timeFrom">Time from</string>
    <string name="betweenTime">-</string>
    <string name="timeTo">Time To</string>
    <string name="enterDate">Enter date</string>
    <string name="enterTaskDescription">Enter task description</string>
    <string name="dataFormat">dd/MM/yyyy</string>
    <string name="dataUserView">DD/MM/YYYY</string>
    <string name="dataFormat2">EEE/dd/MMMM</string>
    <string name="timeUserView">HH/MM</string>
    <string name="saveUpdate"><u><i>Save Update</i></u></string>
</resources>
