<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical" android:layout_width="match_parent"
android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="#8154FF"
        android:gravity="center"
        android:orientation="horizontal">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/sideMenu"
                android:layout_width="60dp"
                android:layout_height="match_parent"
                android:background="#00FFFFFF"
                android:scaleX="1.5"
                android:scaleY="1.5"
                app:srcCompat="@drawable/ic_menu_black_24dp" />


            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/DayView1Weekday"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="bottom|center_horizontal"
                    android:text="@string/dayView1Weekday"
                    android:textAlignment="gravity"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/DayView1Date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/dayView1Date"
                    android:textAlignment="center"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/DayView2Weekday"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:gravity="bottom|center_horizontal"
                    android:text="@string/dayView2Weekday"
                    android:textAlignment="gravity"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/DayView2Date"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:text="@string/dayView2Date"
                    android:textAlignment="center"
                    android:textSize="12sp" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/timeStamps"
                    android:layout_width="60dp"
                    android:layout_height="1000dp"
                    android:orientation="vertical">

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"></LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>

</LinearLayout>